--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,15 +19,27 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: "white";
+  margin: 8px 8%;
+  padding: 2px;
 }
 
 nav {
-  margin: 8px 8%;
   background-color: #205;
-  padding : 2px
+  padding: 1px;
 }
 
 nav img {
   border: 1px solid white;
-  width : 20px
+  width: 20px;
+}
+
+.header-container {
+  display: flex;
+  color: white;
+  gap: 5px;
+  align-items: center;
+  justify-content: space-between;
+}
+main {
+  background-color: #f6f7ee;
 }
